# twr-generic-node

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  meta.yml
.github/workflows/: main.yml
app/: application.c  application.h  radio.h  sensors.c  sensors.h  values.h
src/: CMakeLists.txt  application.c  application.h  values.c
